<resources>
    <string name="app_name">JustPlaying</string>
    <string name="hello_world_text">0</string>
    <string name="random_number">Here\'s a random number between 0 and %1d</string>
    <string name="random_button_label">RANDOM</string>
    <string name="count_button_label">COUNT</string>
    <string name="about_button_label">ABOUT</string>
    <string name="awesome_name">Shih Chiang</string>
    <string name="bio">Hi, my name is Aleks.
                        \n\nI love fish.
                        \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
                        \nFun fact is that I have several aquariums and also a river.
                        \n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
                        \nAnd sometimes I even go fishing.
                        \nAnd even less sometimes, I actually catch something.
                        \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
                        \n\nI\'ll be happy to teach you how to make your own aquarium.
                        \nYou should ask someone else about fishing, though.\n\n</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="color_button_label">COLOR</string>
</resources>
