<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/awesome_name"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/nickname_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nickname_edit"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/NameStyle"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:hint="@string/what_is_your_nickname"
            android:text="" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/NameStyle"
            android:text="@string/done" />

    </LinearLayout>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nickname_edit_layout"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/star_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/snorlax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/snorlax" />

            <TextView
                android:id="@+id/bio_text"
                style="@style/NameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/bio" />
        </LinearLayout>

    </ScrollView>
<!--        app:layout_constraintTop_toBottomOf="@id/star_image" -->
</androidx.constraintlayout.widget.ConstraintLayout>